srcs/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
      metallb.universe.tf/allow-shared-ip: shared
  name: ftps
  labels:
      app: ftps
spec:
  type: LoadBalancer
  selector:
    app: ftps
  ports:
  - name: port-20
    port: 20
    protocol: TCP
    targetPort: 20
  - name: port-21
    port: 21
    protocol: TCP
    targetPort: 21
  - name: port-10000
    port: 10000
    protocol: TCP
    targetPort: 10000
  - name: port-10001
    port: 10001
    protocol: TCP
    targetPort: 10001
  - name: port-10002
    port: 10002
    protocol: TCP
    targetPort: 10002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftps
        imagePullPolicy: Never
        ports:
        - containerPort: 20
          name: port-20
        - containerPort: 21
          name: port-21
        - containerPort: 10000
          name: port-10000
        - containerPort: 10001
          name: port-10001
        - containerPort: 10002
          name: port-10002
