srcs/grafana.yaml
# # https://rtfm.co.ua/en/kubernetes-clusterip-vs-nodeport-vs-loadbalancer-services-and-ingress-an-overview-with-examples/
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  name: grafana
  labels:
    app: grafana
spec:
  type: LoadBalancer
  selector:
    app: grafana # Selects the pod called grafana
  ports:
  - name: grafana
    port: 3000
    targetPort: 3000
    protocol: TCP
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: grafana
    labels:
      app: grafana
  spec:
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: grafana
    replicas: 1
    template:
      metadata:
        labels:
          app: grafana
      spec:
        containers:
        - name: grafana
          image: grafana
          imagePullPolicy: Never
          ports:
          - containerPort: 3000
