srcs/influxdb.yaml
# # https://rtfm.co.ua/en/kubernetes-clusterip-vs-nodeport-vs-loadbalancer-services-and-ingress-an-overview-with-examples/
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  name: influxdb
  labels:
    app: influxdb
spec:
  type: LoadBalancer
  selector:
    app: influxdb # Selects the pod called nginx
  ports:
  - name: influxdb
    port: 8086
    targetPort: 8086
---
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
    name: telegraf
  roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: cluster-admin
  subjects:
    - kind: ServiceAccount
      name: telegraf
      namespace: default
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  selector:
    matchLabels:
      app: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - image: influxdb
        imagePullPolicy: Never
        name: influxdb
        ports:
        - containerPort: 8086
          name: influxdb
