srcs/phpmyadmin.yaml
# # https://rtfm.co.ua/en/kubernetes-clusterip-vs-nodeport-vs-loadbalancer-services-and-ingress-an-overview-with-examples/
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  type: LoadBalancer
  selector:
    app: phpmyadmin # Selects the pod called nginx
  ports:
  - name: phpmyadmin
    port: 5000
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin
        imagePullPolicy: Never
        name: phpmyadmin
        ports:
        - containerPort: 80
