srcs/telegraf.yaml
# # https://rtfm.co.ua/en/kubernetes-clusterip-vs-nodeport-vs-loadbalancer-services-and-ingress-an-overview-with-examples/
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  selector:
    app: telegraf # Selects the pod called nginx
  ports:
  - name: telegraf
    port: 8125
    targetPort: 8125
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: telegraf
  labels:
    app: telegraf
spec:
  selector:
    matchLabels:
      app: telegraf
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: telegraf
    spec:
      serviceAccountName: admin
      containers:
      - image: telegraf
        imagePullPolicy: Never
        name: telegraf
        ports:
        - containerPort: 8125
          name: telegraf
